--- a/yaml/network-policies.yaml
+++ b/yaml/network-policies.yaml
@@ -29,3 +29,14 @@ metadata:
   name: default-deny
 spec:
   podSelector: {}
+---
+kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
+metadata:
+  name: default-deny-all-egress
+  namespace: default
+spec:
+  policyTypes:
+  - Egress
+  podSelector: {}
+  egress: []
