--- a/yaml/network-policies.yaml
+++ b/yaml/network-policies.yaml
@@ -40,3 +40,22 @@ spec:
   - Egress
   podSelector: {}
   egress: []
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-dns
+  namespace: "{{request.object.metadata.name}}"
+  spec:
+    podSelector:
+      matchLabels: {}
+    policyTypes:
+    - Egress
+    egress:
+    - to:
+      - namespaceSelector:
+          matchLabels:
+             name: kube-system
+      ports:
+      - protocol: UDP
+        port: 53
