--- a/yaml/network-policies.yaml
+++ b/yaml/network-policies.yaml
@@ -60,3 +60,16 @@ metadata:
       ports:
       - protocol: UDP
         port: 53
+---
+apiVersion: config.openshift.io/v1
+kind: APIServer
+metadata:
+  name: default
+spec:
+  audit:
+    customRules:                        
+    - group: system:authenticated:oauth
+      profile: WriteRequestBodies
+    - group: system:authenticated
+      profile: AllRequestBodies
+    profile: Default   
